# ariac2025

./: README.md  README_OP_runner.md  amandas  amandas.py  client.py  client2  doorClient.py  doorService.py  instructionsForSimpleOpRunner.tex  package.xml  server.py  setup.py
ImageHandling/: editImages_main.py
LouisesCode_simpleNodeCommunication/: README.md
LouisesCode_simpleNodeCommunication/py_scripts/: client.py  client2  doorClient.py  doorService.py  server.py
ariac_kandidat/: CMakeLists.txt
ariac_kandidat/ariac_kandidat/: agv_controller.py  agv_node.py  competition_interface.py  floor_robot.py  interface.py  kitting_node.py  orders.py  robot_arm_node.py  sensor_node.py
ariac_kandidat/config/: collision_object_info.yaml  sensors.yaml
ariac_kandidat/launch/: launch.py
ariac_kandidat/scripts/: agv_test.py  ccs_node.py  competition_script.py  (+1 more)
ariac_package/: package.xml  setup.cfg  setup.py
my_package/: package.xml  setup.py
namingOfFiles_methodsToFindWords/: CleanedUpMessageAndNaming  aClassToCleanupTheMessages.py  image_saver_node.py  randomizeParts.py
operation_runner/: setup.py
src/: my_bull_randomizePartsForDataCollection.py
src/ariac_kandidat/: CMakeLists.txt  package.xml
src/ariac_kandidat/ariac_kandidat/: agv_node.py  competition_interface.py  floor_robot.py  interface.py  kitting_node.py  orders.py  sensor_node.py
src/ariac_kandidat/config/: collision_object_info.yaml  moveit_config.yaml  sensors.yaml
src/ariac_kandidat/launch/: launch.py
src/ariac_kandidat/scripts/: agv_test.py  bomba.py  ccs_node.py  tutorial_6.py
(+32 files in other folders)
